refactor: article test 수정